Horizontal Scroll Fixes / Positioning

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -14,8 +14,9 @@
 }
 
 .card__image {
-  width: 282px;
-  height: 282px;
+  min-height: 282px;
+  max-height: 282px;
+  object-fit: cover;
 }
 
 .card__description {
