--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,16 +1,23 @@
 .header {
-  padding: 45px 0 0;
-  border-bottom: 2px;
+  padding: 45px 0 41px;
+  border-bottom: solid 1px #545454;
+}
+
+.header__image {
+  max-width: 173px;
+}
+@media screen and (max-width: 880px) {
+  .header {
+    padding: 28px 0 32px 0;
+  }
 }
 
 @media screen and (max-width: 600px) {
   .header {
-    padding: 28px 0 0 27px;
+    padding: 28px 0 32px 17px;
   }
-}
 
-@media screen and (min-width: 601px) and (max-width: 880px) {
-  .header {
-    padding: 28px 0 0 27px;
+  .header__image {
+    max-width: 126px;
   }
 }
