--- a/blocks/page.css
+++ b/blocks/page.css
@@ -15,11 +15,6 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-}
-
-@media screen and (max-width: 880px) {
-  .page__section {
-    margin: 0 20px;
-    max-width: calc(100% - 20px);
-  }
+  padding: 0 10px;
+  margin: 0 auto;
 }
