--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   padding: 40px 0;
-  min-width: 320px;
+  min-width: 300px;
 }
 
 .profile__info {
@@ -41,7 +41,7 @@
   height: 24px;
   width: 24px;
   grid-area: button;
-  border: 2px;
+  border: solid 1px white;
   cursor: pointer;
 }
 
@@ -78,11 +78,11 @@
 @media screen and (max-width: 600px) {
   .profile {
     flex-direction: column;
-    padding-bottom: 0;
+    padding: 36px 0 0;
   }
 
   .profile__image {
-    margin: 0 0 20px;
+    margin: 0 0 26.25px;
   }
 
   .profile__title {
@@ -106,7 +106,7 @@
   }
 
   .profile__add-button {
-    margin: 36px 19px;
+    margin: 36px 0;
     width: 100%;
     max-width: 282px;
     transition-property: width;
@@ -115,6 +115,8 @@
 
   .profile__edit-button {
     margin: 0 0 0 15px;
+    max-width: 18px;
+    max-height: 18px;
   }
 }
 
@@ -126,7 +128,7 @@
   }
 }
 
-@media screen and (min-width: 601px) and (max-width: 880px) {
+@media screen and (min-width: 601px) and (max-width: 900px) {
   .profile__title {
     font-size: 32px;
     line-height: 36px;
